# ChewyTodoList

./: .gitignore  CARD_TEMPLATE_SELECTION.md  DEMO_DATA_GUIDE.md  DEPLOY.md  Dockerfile  Dockerfile.cn  IMPLEMENTATION_SUMMARY.md  PREVIEW_FEATURE_SUMMARY.md  QUICK_START.md  README.md  REFACTOR_SUMMARY.md  TASK_CARD_PREVIEW_FEATURE.md  TEMPLATE_APPLICATION_GUIDE.md  TESTING_SUMMARY.md  THREE_LAYER_ARCHITECTURE.md  UI_STYLE_UNIFICATION.md  VIEW_OPTIMIZATION_SUMMARY.md  VIEW_TEMPLATE_SYSTEM.md  deploy.sh  docker-compose.yml
backend/: .env.example  .env.production.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/apps/todolist/: admin.py  apps.py  exceptions.py  filters.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
backend/apps/todolist/management/commands/: create_sample_data.py  fix_view_filters.py
backend/apps/todolist/migrations/: 0001_initial.py  0002_alter_group_attachments_alter_project_attachments_and_more.py  0002_taskview.py  0003_remove_group_attachments_remove_project_attachments.py  0003_taskview_is_visible_in_nav.py  0004_make_project_optional.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py  testing.py
backend/scripts/: create_demo_data.py  dev.sh  setup.sh  test.sh
docker/: entrypoint.sh  nginx.conf  supervisord.conf  test-deployment.sh
docs/: api-design.md  bugfix-not-equals.md  card-template-improvements.md  completed-tasks-feature.md  deployment-guide.md  development-standards.md  fix-today-value-error.md  implementation-notes.md  (+7 more)
(+54 files in other folders)
